# jiracli

./: .gitignore  .travis.yml  HACKING.rst  LICENSE  README.md  README.rst  jiracli  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pr.yaml
jiracli/: __init__.py  config.py
jiracli/tests/: test_base.py  test_config.py
pbr-1.0.1-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
