[metadata]
name = jiracli
version = 0.4.4
summary = command line interface for jira
description-file =
    README.rst
author = Thomas Bechtold
author-email = thomasbechtold@jpberlin.de
home-page = https://github.com/toabctl/jiracli
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development :: Bug Tracking
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = jiracli

[entry_points]
console_scripts =
    jiracli = jiracli:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
